[gd_scene load_steps=2 format=2]

[ext_resource path="res://juego/Menus/GuardarCargarTest.gd" type="Script" id=1]

[node name="GuardarCargarTest" type="Node"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.934
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -36.76
margin_right = -23.0
margin_bottom = -29.0
text = "Guardar"

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -81.0
margin_right = 137.0
margin_bottom = -31.0
text = "Cargar"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 1.0
margin_top = 183.0
margin_right = 1.0
margin_bottom = 197.0
text = "Hola mundo, mi nombre es"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -53.0
margin_right = -313.0
margin_bottom = -39.0
text = "Resultado"

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -377.0
margin_top = -7.0
margin_right = -314.0
margin_bottom = 7.0
text = "Resultado"

[node name="NombreJSON" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -59.0
margin_right = 68.0
margin_bottom = -35.0

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -12.0
margin_right = 67.0
margin_bottom = 12.0

[node name="Button3" type="Button" parent="."]
margin_left = 336.0
margin_top = 482.0
margin_right = 456.0
margin_bottom = 532.0
text = "Guardar Godot"

[node name="Button4" type="Button" parent="."]
margin_left = 496.0
margin_top = 485.0
margin_right = 616.0
margin_bottom = 535.0
text = "Cargar Godot"

[node name="Button5" type="Button" parent="."]
margin_left = 426.0
margin_top = 385.0
margin_right = 537.0
margin_bottom = 458.0
text = "Borrar"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
